@@ -1,3 +1,8 @@
+2006-07-27  Roger Sayle  <roger@eyesopen.com>
+	    Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* irix5-nat.c (fetch_core_registers): Simplify and correct logic.
+
 2006-07-27  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* target.h (target_read_stralloc): New prototype.
